--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,6 @@
     <title>Appsbee</title>
 </head>
 <body>
-
     <!-- Navbar Section -->
 
     <nav class="navbar navbar-expand-lg navbar-dark border-bottom" aria-label="Fifth navbar example">
@@ -32,7 +31,7 @@
           <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown" aria-expanded="false">Solutions</a>
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Solutions</a>
                 <ul class="dropdown-menu">
                    <li><a href="telehealth-utah.html">Tele-health</a></li>
                    <li><a href="logistics-solutions-utah.html">Logistics/deliver network</a></li>
@@ -63,7 +62,7 @@
               </li>
 
               <li>
-                <a class="nav-link" href="contact.html">Contact Us</a>
+                <a class="nav-link active" href="contact.html">Contact Us</a>
               </li>
             </ul>
             <a href="#" class="btn btn-danger rounded-pill text-uppercase bg-red text-white" data-bs-toggle="modal" data-bs-target="#formModal">Have A PROJECT TO DISCUSS?</a>
@@ -77,13 +76,13 @@
     <!-- Banner Section -->
 
     <div class="banner-section">
-        <img src="assets/images/banner/banner_telehealth.jpg" alt="" width="100%">
+        <img src="assets/images/banner/banne_contact.jpg" alt="" width="100%">
         
-            <div class="banner-content text-end py-5 my-5">
+            <div class="banner-content text-start py-5 my-5">
             <div class="container">
-                <h1>WE PROVIDE HASSLE-FREE REMOTE</h1>
-                <h1>CONSULTATION SERVICES WITH OUR</h1>
-                <h1>READY-TO-USE TELEHEALTH SOLUTIONS</h1>
+                <h1>WE HAVE ADVANCED</h1>
+                <h1>SOLUTIONS THAT ARE READY</h1>
+                <h1>TO BE DEPLOYED FOR YOUR BUSINESS</h1>
                 <a href="#" type="button" class="btn btn-outline-light mt-4 px-4 rounded-pill fw-medium text-uppercase d-lg-inline-block d-none" data-bs-toggle="modal" data-bs-target="#formModal">Start Discussion</a>
             </div>
         </div>
@@ -92,135 +91,136 @@
     <!-- End Of Banner Section -->
 
 
-    <!-- Content Section -->
+    <!-- Business Intelligency Solutions -->
 
-    <section class="content my-4">
+    <section class="lod-content my-4">
         <div class="container">
             <div class="row">
-                <div class="title-content">
-                    <h1>Telehealth Solutions</h1>
-                    <p>Remote Consultations Ensuring Smarter, Faster and Simpler Solutions for Patients</p>
-                    <h2 class="mt-4">Our telehealth solution is easy to integrate and compatible with PC, mobile and tablet devices.</h2>
-                    <p>With the aging population and rising expenses, the healthcare industry is changing rapidly in the way it operates. Increasing prevalence of chronic diseases and lack of adequate medical expertise in the remote sectors are working as the catalysts for Telehealth’s rapid growth opportunities.</p>
-                    <p class="my-4">The graph of dependency on telemedicine is on a constant upward rise. The global telemedicine market size was approximately USD 18.20 billion in 2016 and is expected to reach nearly USD 64 billion by 2022, growing at a CAGR of around 14% between 2017 and 2022.</p>
-                    <img src="assets/images/canvas.jpg" class="rounded mx-auto d-block w-75" alt="...">
+                <div class="title-content text-center">
+                    <h1>Contact Us</h1>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- End Of Content Section -->
-
-    <!-- Telehealth Solutions -->
-
-    <section class="tele-sol">
-        <div class="container">
-            <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">The Need for Telehealth</h2>
-            <div class="row my-4">
-                <div class="col-lg-3 col-md-12 col-12">
-                    <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Remote_Consultation.png" alt="">
-                        <h3>Remote Consultation</h3>
-                        <p>Most of the population lives in the countryside where there are no medical experts or specialists. For critical diseases, patients need to travel to the heart of the cities to receive their treatments. Here comes the demand for remote consultation.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-12 col-12">
-                    <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Overseas_Patients.png" alt="">
-                        <h3>Overseas Patients</h3>
-                        <p>Patients with critical diseases from underdeveloped countries often spend a huge amount of money to travel to the top-rated hospitals of the developed neighboring countries to get their treatments and follow-ups done. Telemedicine makes doctor-patient communication easy before and after travel.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-12 col-12">
-                    <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Busy_Schedule.png" alt="">
-                        <h3>Busy Schedules</h3>
-                        <p>People are so busy with their work, family and other obligations nowadays that they often find it hard to take time out of their schedules to go and visit a doctor. Thus, there is an ardent need for an instant healthcare service accessible at any time from anywhere.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-12 col-12">
-                    <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Heavy_Traffic.png" alt="">
-                        <h3>Heavy Traffic</h3>
-                        <p>It might happen that we book a doctor’s appointment but fail to be on time due to heavy traffic or a prolonged meeting. We end up missing the appointment or are often left to pay the fees and get incomplete answers to our health issues due to late arrival. This is where telemedicine solutions can help.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- End Of Telehealth Solutions -->
+    <!-- End of Business Intelligency Solutions -->
 
 
-    <!-- Benefits Content Section -->
+    <!-- Contact info Section -->
 
-    <section class="benefits-content">
+
+    <section class="contact-info my-4">
         <div class="container">
             <div class="row">
-                    <div class="col-lg-6 col-md-12 col-12">
-                        <h3>Why it Benefits the Patients</h3>
-                        <p>Our superfast lifestyle in the era of digitization demands for instant diagnosis and treatment right from our PCs and smart-phones. Through telemedicine, patients can get doctor consultations from anywhere at any time, with just a few clicks.</p>
-                        <h3 class="mt-4">How Patients benefit from our telehealth solution:</h3>
-                        <ul class="benefits-list my-1">
-                            <li>Search &amp; schedule a doctor’s appointment from anywhere</li>
-                            <li>Engage in a video consultation with a doctor in the morning, noon or night </li>
-                            <li>Get accessibility of new prescriptions or adjusted doses</li>
-                            <li>Request for lab test</li>
-                            <li>Receive lab reports via email/app/website</li>
-                            <li>Have a fast and easy way for second opinion</li>
-                            <li>Receive estimated treatment costs</li>
-                            <li>Make appointments for family members </li>
-                            <li>Have medical records on a secured cloud(EMR)</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-12">
-                        <h3>Why it Benefits the Doctors and Hospitals</h3>
-                        <p>Through our telehealth solutions, healthcare organizations can seamlessly provide unparalleled services to the patients at the right hour, without delay.</p>
-                        <ul class="benefits-list my-1">
-                            <li>Manage all appointments through an app called Appointment Manager</li>
-                            <li>Real-time appointment notifications</li>
-                            <li>Confirm appointments </li>
-                            <li>Cancel appointments</li>
-                            <li>Edit appointment date/time</li>
-                            <li>Engage in video consultations with patients</li>
-                            <li>Access patient’s medical history </li>
-                            <li>Access patient’s health updates through hospital HIS (Our solution is very flexible and scalable and it should be connected to the HIS of the hospital to access all of the features)</li>
-                            <li>Have a dedicated web page for every clinic/hospital</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-12 mt-5">
-                        <h3>Why it Benefits the Medical Tourism Companies</h3>
-                        <p>With our telehealth solutions, medical tourism companies can add value to their services by establishing communication between patients - doctors - hospitals before and after their medical tour.</p>
-                        <ul class="benefits-list my-1">
-                            <li>Implementation of video calls between providers and patients</li>
-                            <li>HIPAA Texting</li>
-                            <li>Real-time messaging</li>
-                            <li>Group messaging</li>
-                            <li>Mobile charge capture</li>
-                            <li>Automated discharge, admission, transfer and clinical push notification</li>
-                            <li>Rounding and call scheduling management</li>
-                            <li>Case history</li>
-                            <li>Secured patient portals</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-12 mt-5">
-                        <h3>Technology</h3>
-                        <p>For video-based calling solution, we have extensively used WEBRTC based solutions like OpenTalk, Tokbox, etc. We have successfully connected mobile devices (both iOS and Android) and web applications via OpenTalk, which means, a call is initiated from an iPhone, the call gets through an Android device or a PC. We have built the rest of the implementation on LAMP stack.</p>
-                        <h3>Platforms</h3>
-                        <p>Our telehealth solutions are compatible with</p>
-                        <ul class="benefits-list my-1">
-                            <li>iOS</li>
-                            <li>Android</li>
-                            <li>Web</li>
-                        </ul>
-                        <img src="assets/images/telh-graph.png" alt="telehealth-utah" class="img-fluid">
-                    </div>
+                <div class="col-lg-6 col-md-12 col-12">
+                    <h4 class="my-3">APPSBEE USA</h4>
+                    <p><i class="fa-solid fa-map-pin text-danger me-2"></i> 3450 N. Triumph Blvd. Suite 102-124, Lehi Utah 84043</p>
+                    <h4 class="my-3">Appsbee Europe </h4>
+                    <p><i class="fa-solid fa-map-pin text-danger me-2"></i> Västra Hamnen / Malmö, Sweden</p>
+                    <h4 class="an-title-xs">Appsbee India</h4>
+                    <p><i class="fa-solid fa-map-pin text-danger me-2"></i> Rishi Tech Park, Street No : 360, DH6/2, Newtown, Kolkata : 700156,</p>
+                </div>
+                <div class="col-lg-6 col-md-12 col-12">
+                   
+                    <form class="row g-3 p-4 bg-light" action="#" method="post" enctype="multipart/form-data">
+                         <h4 class="my-3">GET IN TOUCH WITH US</h4>
+                        <div class="col-md-6">
+                            <label for="inputEmail4" class="form-label">Name</label>
+                            <input type="text" class="form-control" placeholder="Name" aria-label="Your Name">
+                          </div>
+                        <div class="col-md-6">
+                          <label for="inputEmail4" class="form-label">Email</label>
+                          <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                        </div>
+                        <div class="col-md-6">
+                          <label for="inputPassword4" class="form-label">Telephone</label>
+                          <input type="password" class="form-control" id="inputPassword4" placeholder="Telephone">
+                        </div>
+                        <div class="col-md-6">
+                          <label for="inputAddress" class="form-label">Company</label>
+                          <input type="text" class="form-control" id="inputAddress" placeholder="your Company Name">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="inputState" class="form-label">How did you hear about us?</label>
+                            <select id="inputState" class="form-select">
+                              <<option value="" selected="selected">Select Option</option>
+
+                              <option value="Bing">Bing</option>
+
+                              <option value="Behance">Behance</option>
+
+                              <option value="Business Card">Business Card</option>
+
+                              <option value="Email">Email</option>
+
+                              <option value="Facebook">Facebook</option>
+
+                              <option value="Flickr">Flickr</option>
+
+                              <option value="From a friend">From a friend</option>
+
+                              <option value="Google Search">Google Search</option>
+
+                              <option value="Google +1">Google +1</option>
+
+                              <option value="Linkedin">Linkedin</option>
+
+                              <option value="Magazine">Magazine</option>
+
+                              <option value="Newspaper">Newspaper</option>
+
+                              <option value="Pinterest">Pinterest</option>
+
+                              <option value="Social Event">Social Event</option>
+
+                              <option value="StumbleUpon">StumbleUpon</option>
+
+                              <option value="Television">Television</option>
+
+                              <option value="Twitter">Twitter</option>
+
+                              <option value="Website Referral">Website Referral</option>
+
+                              <option value="Yadig">Yadig</option>
+
+                              <option value="YouTube">YouTube</option>
+
+                              <option value="Yellow Pages">Yellow Pages</option>
+
+                              <option value="OtherSource">Other source…</option>
+                            </select>
+                          </div>
+                          <div class="col-md-6">
+                            <label for="inputState" class="form-label">Service Looking?</label>
+                            <select id="inputState" class="form-select">
+                              <option value="" selected="selected">Select Option</option>
+
+                              <option value="" selected="selected">Select Option</option>
+
+                                            <option value="Mobile App Development">Mobile App Development</option>
+
+                                            <option value="Web Development">Web Development</option>
+
+                                            <option value="Application Performance Improvement">Application Performance Improvement</option>
+
+                                            <option value="Business Automation">Business Automation</option>
+
+                                            <option value="IOT Product Development">IOT Product Development</option>
+                            </select>
+                          </div>
+                          <div class="col-12">
+                            <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Tell Us Something"></textarea>
+                          </div>
+                        <div class="col-12">
+                          <button type="submit" class="btn btn-dark px-4 rounded-pill">Send Message</button>
+                        </div>
+                      </form>
                 </div>
             </div>
     </section>
 
-
-    <!-- End Of Benefits Content Section -->
+    <!-- End Of Contact Info -->
 
 
     <!-- Footer Section -->
@@ -275,11 +275,10 @@
           <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
         </div>
       </div>
-  
 
-       <!-- Form Modal -->
+      <!-- Form Modal -->
 
-       <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
+      <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content form-modal-bg py-3">
             <div class="modal-header">
@@ -321,7 +320,6 @@
       </div>
 
       <!-- End Of Form Modal -->
-  
   
       <!--  Optional JavaScript -->
       <script src="assets/js/jquery-3.6.3.min.js"></script>
