--- a/fontend-UI-utah.html
+++ b/fontend-UI-utah.html
@@ -19,7 +19,6 @@
     <title>Appsbee</title>
 </head>
 <body>
-
     <!-- Navbar Section -->
 
     <nav class="navbar navbar-expand-lg navbar-dark border-bottom" aria-label="Fifth navbar example">
@@ -32,7 +31,7 @@
           <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown" aria-expanded="false">Solutions</a>
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Solutions</a>
                 <ul class="dropdown-menu">
                    <li><a href="telehealth-utah.html">Tele-health</a></li>
                    <li><a href="logistics-solutions-utah.html">Logistics/deliver network</a></li>
@@ -51,7 +50,7 @@
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Technology</a>
+                <a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown" aria-expanded="false">Technology</a>
                 <ul class="dropdown-menu">
                     <li><a href="software-development-utah.html">Software Product Development</a></li>
                     <li><a href="machine-learning-utah.html">Machine Learning</a></li>
@@ -77,13 +76,13 @@
     <!-- Banner Section -->
 
     <div class="banner-section">
-        <img src="assets/images/banner/banner_telehealth.jpg" alt="" width="100%">
+        <img src="assets/images/banner/banne_frontend_developer.jpg" alt="" width="100%">
         
-            <div class="banner-content text-end py-5 my-5">
+            <div class="banner-content text-start py-5 my-5">
             <div class="container">
-                <h1>WE PROVIDE HASSLE-FREE REMOTE</h1>
-                <h1>CONSULTATION SERVICES WITH OUR</h1>
-                <h1>READY-TO-USE TELEHEALTH SOLUTIONS</h1>
+                <h1>THIS IS ALL YOUR CUSTOMERS WILL SEE.</h1>
+                <h1>MAKE SURE TO USE THE BEST TEAM TO</h1>
+                <h1>DEVELOP THE FRONTEND.</h1>
                 <a href="#" type="button" class="btn btn-outline-light mt-4 px-4 rounded-pill fw-medium text-uppercase d-lg-inline-block d-none" data-bs-toggle="modal" data-bs-target="#formModal">Start Discussion</a>
             </div>
         </div>
@@ -92,135 +91,127 @@
     <!-- End Of Banner Section -->
 
 
-    <!-- Content Section -->
+    <!-- Benefits From Solution Section -->
 
-    <section class="content my-4">
+    <section class="tele-sol my-5">
         <div class="container">
+            <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">The Wheeze Behind The Best Websites</h2>
+            <div class="row my-5">
+                <div class="col-lg-4 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Designing-the-Most-Professional-Web-Pages.png" alt="">
+                        <h3>Designing the Most Professional Web Pages</h3>
+                        <p>By embedding scripts in HTML5 and CSS3, we aim at rendering designs that grab the attention of potential customers, thus making business more and more reachable to the customers.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Achieving-Dynamicity.png" alt="">
+                        <h3>Achieving Dynamicity</h3>
+                        <p>We make sure that hovering through the websites is seamless and exciting by making websites dynamic through JavaScript and Future JavaScript with ES2015 or ES6/ES7.</p>
+                        <p>JavaScript/ Future JavaScript can help in:</p>
+                        <ul class="benefits-list text-start my-2">
+                            <li>Animating images</li>
+                            <li>Event Binding</li>
+                            <li>Form Validation</li>
+                            <li>Achieving interesting websites through banners, pop-ups, drop-downs, etc.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-12">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Having-Most-Enhanced-Features-at-Fingertips.png" alt="">
+                        <h3>Having Most Enhanced Features at Fingertips</h3>
+                        <p>We employ JQuery for adding the most advanced features while creating a web page with JavaScript.</p>
+                        <ul>
+                            <li>Adding extensions and plug-ins.</li>
+                            <li>Choosing usage styles</li>
+                            <li>Making use of utility functions</li>
+                            <li>Adding ready-made element to web pages, etc.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-12 mx-auto">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Employing-the-Sophisticated-Page-Template-Booster.png" alt="">
+                        <h3>Employing the Sophisticated Page Template-Booster</h3>
+                        <p>We use Booster, the HTML5 Bootstrap landing page template. This is a CSS framework.</p>
+                        <p>Why Booster?</p>
+                        <ul class="benefits-list text-start my-2">
+                            <li>Free</li>
+                            <li>Easy to use</li>
+                            <li>Loads very fast</li>
+                            <li>Lightweight</li>
+                            <li>Smartly Coded</li>
+                            <li>SEO Friendly</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-12 mx-auto">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Responsive-HTML.png" alt="">
+                        <h3>Responsive HTML</h3>
+                        <p>We want websites to be compatible in every device, be it desktop, mobile or tablet. This is why we make HTML responsive.</p>
+                        <p>Why Booster?</p>
+                        <ul class="benefits-list text-start my-2">
+                            <li>Free</li>
+                            <li>Easy to use</li>
+                            <li>Loads very fast</li>
+                            <li>Lightweight</li>
+                            <li>Smartly Coded</li>
+                            <li>SEO Friendly</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-12 col-12 mx-auto">
+                    <div class="tele-sol-item my-4 text-center">
+                        <img src="assets/icons/Responsive-HTML.png" alt="">
+                        <h3>Boosting Up Material Design</h3>
+                        <p>We aim at enhancing Material Design for creating easy to understand UI through the right technologies to provide seamless user experience.</p>
+                        <p>Material Design ensures:</p>
+                        <ul class="benefits-list text-start my-2">
+                            <li>Easy usability</li>
+                            <li>Design Perfection</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <div class="row">
-                <div class="title-content">
-                    <h1>Telehealth Solutions</h1>
-                    <p>Remote Consultations Ensuring Smarter, Faster and Simpler Solutions for Patients</p>
-                    <h2 class="mt-4">Our telehealth solution is easy to integrate and compatible with PC, mobile and tablet devices.</h2>
-                    <p>With the aging population and rising expenses, the healthcare industry is changing rapidly in the way it operates. Increasing prevalence of chronic diseases and lack of adequate medical expertise in the remote sectors are working as the catalysts for Telehealth’s rapid growth opportunities.</p>
-                    <p class="my-4">The graph of dependency on telemedicine is on a constant upward rise. The global telemedicine market size was approximately USD 18.20 billion in 2016 and is expected to reach nearly USD 64 billion by 2022, growing at a CAGR of around 14% between 2017 and 2022.</p>
-                    <img src="assets/images/canvas.jpg" class="rounded mx-auto d-block w-75" alt="...">
+                <div class="col-lg-6 col-md-12 col-12">
+                    <div class="title-content">
+                        <h1>Incorporating Angular JS/ Angular and React JS</h1>
+                        <p class="mt-3">Among so many JavaScript frameworks in the purview of website development, we hand-picked Angular and React for building websites in the advanced and smartest possible ways.</p>
+                        <h5>Platforms</h5>
+                        <ul class="benefits-list my-2 text-start">
+                            <li>Communication </li>
+                            <li>Financial services </li>
+                            <li>E-learning and school management</li>
+                            <li>Hospitality </li>
+                            <li>Technology</li>
+                            <li>Entertainment</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-12">
+                    <h2>Here are some reasons for choosing Angular and React:</h2>
+                    <ul class="benefits-list my-2 text-start">
+                        <li>Systematic, less complex, easy to understand</li>
+                        <li>Allows code reuse</li>
+                        <li>High-speed rendering ensuring quality performance</li>
+                        <li>Usage of hi-end developer tools</li>
+                        <li>Simplifies HTML</li>
+                        <li>Compatible across multiple platforms (such as iOS and Android)  and devices (such as mobiles)</li>
+                        <li>Handles mammoth data with utmost efficiency </li>
+                        <li>Boosts website performance</li>
+                        <li>Provides ready-made solutions</li>
+                        <li>Allows effortless site testing</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- End Of Content Section -->
-
-    <!-- Telehealth Solutions -->
-
-    <section class="tele-sol">
-        <div class="container">
-            <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">The Need for Telehealth</h2>
-            <div class="row my-4">
-                <div class="col-lg-3 col-md-12 col-12">
-                    <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Remote_Consultation.png" alt="">
-                        <h3>Remote Consultation</h3>
-                        <p>Most of the population lives in the countryside where there are no medical experts or specialists. For critical diseases, patients need to travel to the heart of the cities to receive their treatments. Here comes the demand for remote consultation.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-12 col-12">
-                    <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Overseas_Patients.png" alt="">
-                        <h3>Overseas Patients</h3>
-                        <p>Patients with critical diseases from underdeveloped countries often spend a huge amount of money to travel to the top-rated hospitals of the developed neighboring countries to get their treatments and follow-ups done. Telemedicine makes doctor-patient communication easy before and after travel.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-12 col-12">
-                    <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Busy_Schedule.png" alt="">
-                        <h3>Busy Schedules</h3>
-                        <p>People are so busy with their work, family and other obligations nowadays that they often find it hard to take time out of their schedules to go and visit a doctor. Thus, there is an ardent need for an instant healthcare service accessible at any time from anywhere.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-12 col-12">
-                    <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Heavy_Traffic.png" alt="">
-                        <h3>Heavy Traffic</h3>
-                        <p>It might happen that we book a doctor’s appointment but fail to be on time due to heavy traffic or a prolonged meeting. We end up missing the appointment or are often left to pay the fees and get incomplete answers to our health issues due to late arrival. This is where telemedicine solutions can help.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- End Of Telehealth Solutions -->
-
-
-    <!-- Benefits Content Section -->
-
-    <section class="benefits-content">
-        <div class="container">
-            <div class="row">
-                    <div class="col-lg-6 col-md-12 col-12">
-                        <h3>Why it Benefits the Patients</h3>
-                        <p>Our superfast lifestyle in the era of digitization demands for instant diagnosis and treatment right from our PCs and smart-phones. Through telemedicine, patients can get doctor consultations from anywhere at any time, with just a few clicks.</p>
-                        <h3 class="mt-4">How Patients benefit from our telehealth solution:</h3>
-                        <ul class="benefits-list my-1">
-                            <li>Search &amp; schedule a doctor’s appointment from anywhere</li>
-                            <li>Engage in a video consultation with a doctor in the morning, noon or night </li>
-                            <li>Get accessibility of new prescriptions or adjusted doses</li>
-                            <li>Request for lab test</li>
-                            <li>Receive lab reports via email/app/website</li>
-                            <li>Have a fast and easy way for second opinion</li>
-                            <li>Receive estimated treatment costs</li>
-                            <li>Make appointments for family members </li>
-                            <li>Have medical records on a secured cloud(EMR)</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-12">
-                        <h3>Why it Benefits the Doctors and Hospitals</h3>
-                        <p>Through our telehealth solutions, healthcare organizations can seamlessly provide unparalleled services to the patients at the right hour, without delay.</p>
-                        <ul class="benefits-list my-1">
-                            <li>Manage all appointments through an app called Appointment Manager</li>
-                            <li>Real-time appointment notifications</li>
-                            <li>Confirm appointments </li>
-                            <li>Cancel appointments</li>
-                            <li>Edit appointment date/time</li>
-                            <li>Engage in video consultations with patients</li>
-                            <li>Access patient’s medical history </li>
-                            <li>Access patient’s health updates through hospital HIS (Our solution is very flexible and scalable and it should be connected to the HIS of the hospital to access all of the features)</li>
-                            <li>Have a dedicated web page for every clinic/hospital</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-12 mt-5">
-                        <h3>Why it Benefits the Medical Tourism Companies</h3>
-                        <p>With our telehealth solutions, medical tourism companies can add value to their services by establishing communication between patients - doctors - hospitals before and after their medical tour.</p>
-                        <ul class="benefits-list my-1">
-                            <li>Implementation of video calls between providers and patients</li>
-                            <li>HIPAA Texting</li>
-                            <li>Real-time messaging</li>
-                            <li>Group messaging</li>
-                            <li>Mobile charge capture</li>
-                            <li>Automated discharge, admission, transfer and clinical push notification</li>
-                            <li>Rounding and call scheduling management</li>
-                            <li>Case history</li>
-                            <li>Secured patient portals</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-12 mt-5">
-                        <h3>Technology</h3>
-                        <p>For video-based calling solution, we have extensively used WEBRTC based solutions like OpenTalk, Tokbox, etc. We have successfully connected mobile devices (both iOS and Android) and web applications via OpenTalk, which means, a call is initiated from an iPhone, the call gets through an Android device or a PC. We have built the rest of the implementation on LAMP stack.</p>
-                        <h3>Platforms</h3>
-                        <p>Our telehealth solutions are compatible with</p>
-                        <ul class="benefits-list my-1">
-                            <li>iOS</li>
-                            <li>Android</li>
-                            <li>Web</li>
-                        </ul>
-                        <img src="assets/images/telh-graph.png" alt="telehealth-utah" class="img-fluid">
-                    </div>
-                </div>
-            </div>
-    </section>
-
-
-    <!-- End Of Benefits Content Section -->
+    <!-- End of Benefits From Solution Section -->
 
 
     <!-- Footer Section -->
@@ -275,7 +266,6 @@
           <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
         </div>
       </div>
-  
 
        <!-- Form Modal -->
 
@@ -321,7 +311,6 @@
       </div>
 
       <!-- End Of Form Modal -->
-  
   
       <!--  Optional JavaScript -->
       <script src="assets/js/jquery-3.6.3.min.js"></script>
