--- a/mobile-application-utah.html
+++ b/mobile-application-utah.html
@@ -32,7 +32,7 @@
           <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown" aria-expanded="false">Solutions</a>
+                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Solutions</a>
                 <ul class="dropdown-menu">
                    <li><a href="telehealth-utah.html">Tele-health</a></li>
                    <li><a href="logistics-solutions-utah.html">Logistics/deliver network</a></li>
@@ -51,7 +51,7 @@
               </li>
 
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Technology</a>
+                <a class="nav-link dropdown-toggle active" href="#" data-bs-toggle="dropdown" aria-expanded="false">Technology</a>
                 <ul class="dropdown-menu">
                     <li><a href="software-development-utah.html">Software Product Development</a></li>
                     <li><a href="machine-learning-utah.html">Machine Learning</a></li>
@@ -77,13 +77,13 @@
     <!-- Banner Section -->
 
     <div class="banner-section">
-        <img src="assets/images/banner/banner_telehealth.jpg" alt="" width="100%">
+        <img src="assets/images/banner/banne_Mobileapplication.jpg" alt="" width="100%">
         
-            <div class="banner-content text-end py-5 my-5">
+            <div class="banner-content text-start py-5 my-5">
             <div class="container">
-                <h1>WE PROVIDE HASSLE-FREE REMOTE</h1>
-                <h1>CONSULTATION SERVICES WITH OUR</h1>
-                <h1>READY-TO-USE TELEHEALTH SOLUTIONS</h1>
+                <h1>MOBILE APPLICATION DEVELOPMENT</h1>
+                <h1>DIS CLOSE TO OUR HEART.</h1>
+                <h1>WE PROMISE TO DELIVER ONLY THE BEST.</h1>
                 <a href="#" type="button" class="btn btn-outline-light mt-4 px-4 rounded-pill fw-medium text-uppercase d-lg-inline-block d-none" data-bs-toggle="modal" data-bs-target="#formModal">Start Discussion</a>
             </div>
         </div>
@@ -92,135 +92,143 @@
     <!-- End Of Banner Section -->
 
 
-    <!-- Content Section -->
+    <!-- Business Intelligency Solutions -->
 
-    <section class="content my-4">
+    <section class="lod-content my-4">
         <div class="container">
             <div class="row">
                 <div class="title-content">
-                    <h1>Telehealth Solutions</h1>
-                    <p>Remote Consultations Ensuring Smarter, Faster and Simpler Solutions for Patients</p>
-                    <h2 class="mt-4">Our telehealth solution is easy to integrate and compatible with PC, mobile and tablet devices.</h2>
-                    <p>With the aging population and rising expenses, the healthcare industry is changing rapidly in the way it operates. Increasing prevalence of chronic diseases and lack of adequate medical expertise in the remote sectors are working as the catalysts for Telehealth’s rapid growth opportunities.</p>
-                    <p class="my-4">The graph of dependency on telemedicine is on a constant upward rise. The global telemedicine market size was approximately USD 18.20 billion in 2016 and is expected to reach nearly USD 64 billion by 2022, growing at a CAGR of around 14% between 2017 and 2022.</p>
-                    <img src="assets/images/canvas.jpg" class="rounded mx-auto d-block w-75" alt="...">
+                    <h1>Directing Businesses Skillfully Through Mobiles</h1>
+                    <p class="mt-2">We live in an era of mobility where customers turn to mobile apps for almost every possible thing from ordering food to booking hotels. Our team of skilled developers excel in building mobile apps to drive business faster and wider.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- End Of Content Section -->
+    <!-- End of Business Intelligency Solutions -->
 
-    <!-- Telehealth Solutions -->
 
-    <section class="tele-sol">
+    <!-- Benefits From Solution Section -->
+
+    <section class="tele-sol my-5">
         <div class="container">
-            <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">The Need for Telehealth</h2>
-            <div class="row my-4">
-                <div class="col-lg-3 col-md-12 col-12">
+            <h2 class="text-start text-capitalize position-relative d-inline-block decoration-line">We Help You Build the Most Creative Mobile Apps</h2>
+            <p class="mt-4">In a market where competition is growing at rocket speed, every business should have Mobile Apps that are remarkable enough to grab the attention of the customers and make the business tag stand out. With up-to-date technology and creative ideas, our developers aim to render first-class mobile applications for your business. How do we achieve this goal?</p>
+            <div class="row my-5">
+                <div class="col-lg-4 col-md-12 col-12">
                     <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Remote_Consultation.png" alt="">
-                        <h3>Remote Consultation</h3>
-                        <p>Most of the population lives in the countryside where there are no medical experts or specialists. For critical diseases, patients need to travel to the heart of the cities to receive their treatments. Here comes the demand for remote consultation.</p>
+                        <img src="assets/icons/Rigorous-Research.png" alt="">
+                        <h3>Rigorous Research</h3>
+                        <!-- <p>In Logistics, Blockchain helps to provide a clearer picture of transactions from individual customers by breaking the system into nodes, thus cryptographically securing transactions</p> -->
+                        <ul class="benefits-list my-2 text-start">
+                            <li>We engage in thorough consultations to gain an overall knowhow about the business model</li>
+                            <li>We research product goals</li>
+                            <li>We strive to achieve clear understanding of what the mobile application aims to communicate</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-12 col-12">
+                <div class="col-lg-4 col-md-12 col-12">
                     <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Overseas_Patients.png" alt="">
-                        <h3>Overseas Patients</h3>
-                        <p>Patients with critical diseases from underdeveloped countries often spend a huge amount of money to travel to the top-rated hospitals of the developed neighboring countries to get their treatments and follow-ups done. Telemedicine makes doctor-patient communication easy before and after travel.</p>
+                        <img src="assets/icons/Planning,-Design-and-Development.png" alt="">
+                        <h3>Planning, Design and Development</h3>
+                        <p>With proper planning for your app and well-defined strategies, our mobile development experts constantly communicate with your team to design the best and most appropriate apps for your business.</p>
+                        <ul class="benefits-list my-2 text-start">
+                            <li>We decide and develop the themes</li>
+                            <li>We make sure they are user-friendly</li>
+                            <li>We ensure higher speeds</li>
+                            <li>We make them available for both Apple App Store and Google Play Store</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-12 col-12">
+                <div class="col-lg-4 col-md-12 col-12">
                     <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Busy_Schedule.png" alt="">
-                        <h3>Busy Schedules</h3>
-                        <p>People are so busy with their work, family and other obligations nowadays that they often find it hard to take time out of their schedules to go and visit a doctor. Thus, there is an ardent need for an instant healthcare service accessible at any time from anywhere.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-12 col-12">
-                    <div class="tele-sol-item my-4 text-center">
-                        <img src="assets/icons/Heavy_Traffic.png" alt="">
-                        <h3>Heavy Traffic</h3>
-                        <p>It might happen that we book a doctor’s appointment but fail to be on time due to heavy traffic or a prolonged meeting. We end up missing the appointment or are often left to pay the fees and get incomplete answers to our health issues due to late arrival. This is where telemedicine solutions can help.</p>
+                        <img src="assets/icons/Constant-Support.png" alt="">
+                        <h3>Constant Support</h3>
+                        <p>It’s great when your app is ready to be deployed. However, our responsibility does not end there. Once the app is developed, we ensure proper maintenance through rigorous mobile testing and observation.</p>
+                        <ul class="benefits-list my-2 text-start">
+                            <li>The apps go through continuous testing processes</li>
+                            <li>Testers raise bugs</li>
+                            <li>Bugs are fixed and assigned back to the testers</li>
+                            <li>Testers retest to ensure that the fix is successful</li>
+                            <li>Once the fix is successful, the bug is finally closed</li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- End Of Telehealth Solutions -->
+    <!-- End of Benefits From Solution Section -->
 
 
-    <!-- Benefits Content Section -->
+     <!-- Business Intelligency Solutions -->
 
-    <section class="benefits-content">
+     <section class="lod-content my-4">
         <div class="container">
             <div class="row">
-                    <div class="col-lg-6 col-md-12 col-12">
-                        <h3>Why it Benefits the Patients</h3>
-                        <p>Our superfast lifestyle in the era of digitization demands for instant diagnosis and treatment right from our PCs and smart-phones. Through telemedicine, patients can get doctor consultations from anywhere at any time, with just a few clicks.</p>
-                        <h3 class="mt-4">How Patients benefit from our telehealth solution:</h3>
-                        <ul class="benefits-list my-1">
-                            <li>Search &amp; schedule a doctor’s appointment from anywhere</li>
-                            <li>Engage in a video consultation with a doctor in the morning, noon or night </li>
-                            <li>Get accessibility of new prescriptions or adjusted doses</li>
-                            <li>Request for lab test</li>
-                            <li>Receive lab reports via email/app/website</li>
-                            <li>Have a fast and easy way for second opinion</li>
-                            <li>Receive estimated treatment costs</li>
-                            <li>Make appointments for family members </li>
-                            <li>Have medical records on a secured cloud(EMR)</li>
-                        </ul>
+                <div class="title-content">
+                    <h1>Who Are We Serving?</h1>
+                    <p class="mt-3">Our mobile solutions team is highly experienced in business solutions for different industries. The solutions address both enterprise and customer-related challenges and opportunities to drive business transformation through mobility. Our team has a high level of domain expertise in building mobility solutions for different industries which are mentioned below-</p>
+                    <div class="row">
+                        <div class="col-lg-6 col-md-12 col-12">
+                            <ul class="benefits-list my-2 text-start">
+                                <li>Healthcare</li>
+                                <li>Security Protocol</li>
+                                <li>Real estate intelligence development platform</li>
+                                <li>Social payments </li>
+                                <li>Business automation </li>
+                                <li>Social network </li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6 col-md-12 col-12">
+                            <ul class="benefits-list my-2 text-start">
+                                <li>Communication </li>
+                                <li>Financial services </li>
+                                <li>E-learning and school management</li>
+                                <li>Hospitality </li>
+                                <li>Technology</li>
+                                <li>Entertainment</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 col-12">
-                        <h3>Why it Benefits the Doctors and Hospitals</h3>
-                        <p>Through our telehealth solutions, healthcare organizations can seamlessly provide unparalleled services to the patients at the right hour, without delay.</p>
-                        <ul class="benefits-list my-1">
-                            <li>Manage all appointments through an app called Appointment Manager</li>
-                            <li>Real-time appointment notifications</li>
-                            <li>Confirm appointments </li>
-                            <li>Cancel appointments</li>
-                            <li>Edit appointment date/time</li>
-                            <li>Engage in video consultations with patients</li>
-                            <li>Access patient’s medical history </li>
-                            <li>Access patient’s health updates through hospital HIS (Our solution is very flexible and scalable and it should be connected to the HIS of the hospital to access all of the features)</li>
-                            <li>Have a dedicated web page for every clinic/hospital</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-12 mt-5">
-                        <h3>Why it Benefits the Medical Tourism Companies</h3>
-                        <p>With our telehealth solutions, medical tourism companies can add value to their services by establishing communication between patients - doctors - hospitals before and after their medical tour.</p>
-                        <ul class="benefits-list my-1">
-                            <li>Implementation of video calls between providers and patients</li>
-                            <li>HIPAA Texting</li>
-                            <li>Real-time messaging</li>
-                            <li>Group messaging</li>
-                            <li>Mobile charge capture</li>
-                            <li>Automated discharge, admission, transfer and clinical push notification</li>
-                            <li>Rounding and call scheduling management</li>
-                            <li>Case history</li>
-                            <li>Secured patient portals</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6 col-md-12 col-12 mt-5">
-                        <h3>Technology</h3>
-                        <p>For video-based calling solution, we have extensively used WEBRTC based solutions like OpenTalk, Tokbox, etc. We have successfully connected mobile devices (both iOS and Android) and web applications via OpenTalk, which means, a call is initiated from an iPhone, the call gets through an Android device or a PC. We have built the rest of the implementation on LAMP stack.</p>
-                        <h3>Platforms</h3>
-                        <p>Our telehealth solutions are compatible with</p>
-                        <ul class="benefits-list my-1">
-                            <li>iOS</li>
-                            <li>Android</li>
-                            <li>Web</li>
-                        </ul>
-                        <img src="assets/images/telh-graph.png" alt="telehealth-utah" class="img-fluid">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-12 col-12">
+                            <div class="title-content">
+                                <h1>Incorporating Angular JS/ Angular and React JS</h1>
+                                <p class="mt-3">Among so many JavaScript frameworks in the purview of website development, we hand-picked Angular and React for building websites in the advanced and smartest possible ways.</p>
+                                <h5>Platforms</h5>
+                                <ul class="benefits-list my-2 text-start">
+                                    <li>Communication </li>
+                                    <li>Financial services </li>
+                                    <li>E-learning and school management</li>
+                                    <li>Hospitality </li>
+                                    <li>Technology</li>
+                                    <li>Entertainment</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-12 col-12">
+                            <h2>Here are some reasons for choosing Angular and React:</h2>
+                            <ul class="benefits-list my-2 text-start">
+                                <li>Systematic, less complex, easy to understand</li>
+                                <li>Allows code reuse</li>
+                                <li>High-speed rendering ensuring quality performance</li>
+                                <li>Usage of hi-end developer tools</li>
+                                <li>Simplifies HTML</li>
+                                <li>Compatible across multiple platforms (such as iOS and Android)  and devices (such as mobiles)</li>
+                                <li>Handles mammoth data with utmost efficiency </li>
+                                <li>Boosts website performance</li>
+                                <li>Provides ready-made solutions</li>
+                                <li>Allows effortless site testing</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
-
-    <!-- End Of Benefits Content Section -->
+    <!-- End of Business Intelligency Solutions -->
 
 
     <!-- Footer Section -->
@@ -275,7 +283,6 @@
           <img class="w-auto me-3" src="assets/images/apps_img-footer.png"> 2009 - 2023 Appsbee. All Rights Reserved.
         </div>
       </div>
-  
 
        <!-- Form Modal -->
 
@@ -321,7 +328,6 @@
       </div>
 
       <!-- End Of Form Modal -->
-  
   
       <!--  Optional JavaScript -->
       <script src="assets/js/jquery-3.6.3.min.js"></script>
